dos/etc/iptables/rules.v4
# Generated by iptables-save v1.8.4 on Sun Apr  6 18:47:23 2025
*filter
:INPUT DROP [9:466]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1:52]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-logging-allow - [0:0]
:ufw-logging-deny - [0:0]
:ufw-not-local - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-skip-to-policy-forward - [0:0]
:ufw-skip-to-policy-input - [0:0]
:ufw-skip-to-policy-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-user-input - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-output - [0:0]
-A INPUT -s 3.22.208.99/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.22.208.99/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.143.214.100/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.143.214.100/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.217.53.133/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.217.53.133/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.143.178/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.143.178/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.14.133.138/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.14.133.138/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.187.205/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.187.205/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.16.75.201/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.16.75.201/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.67.133/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.67.133/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.17.59.199/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.17.59.199/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.40.79/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.40.79/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.191.167.79/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.191.167.79/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.224.30.216/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.224.30.216/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.191.251.36/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.191.251.36/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.16.1.87/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.16.1.87/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.141.4.12/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.141.4.12/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.118.30.3/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.118.30.3/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.210.92/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.210.92/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.107.172/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.107.172/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.117.157.139/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.117.157.139/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.156.237/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.156.237/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.129.89.50/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.129.89.50/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.143.244.92/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.143.244.92/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.177.138/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.177.138/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.45.205/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.45.205/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.118.210.6/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.118.210.6/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.137.178.51/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.137.178.51/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.86.123/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.86.123/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.226.226.164/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.226.226.164/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.22.79.36/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.22.79.36/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.128.190.205/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.128.190.205/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.141.31.156/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.141.31.156/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.142.187.179/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.142.187.179/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.57.4/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.57.4/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.126.62/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.126.62/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.138.232/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.138.232/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.133.83.123/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.133.83.123/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.251.131/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.251.131/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.217.138.109/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.217.138.109/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.16.50.172/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.16.50.172/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.217.170.18/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.217.170.18/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.149.248.173/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.149.248.173/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.224.51.27/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.224.51.27/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.188.195.92/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.188.195.92/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.128.190.174/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.128.190.174/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.149.233.90/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.149.233.90/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.226.226.165/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.226.226.165/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.64.87/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.64.87/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.194.128/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.194.128/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.137.203.53/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.137.203.53/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.218.206.106/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.218.206.106/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.187.189/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.187.189/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.139.103.152/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.139.103.152/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.22.27.106/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.22.27.106/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.135.192.51/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.135.192.51/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.59.79.237/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.59.79.237/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.225.56.185/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.225.56.185/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.136.234.122/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.136.234.122/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.218.75.143/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.218.75.143/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.221.89.241/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.221.89.241/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.57.238/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.57.238/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.149.27.97/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.149.27.97/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.164.55/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.164.55/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 162.55.81.190/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 162.55.81.190/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.203.168/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.203.168/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.199.13/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.199.13/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.117.238.162/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.117.238.162/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.142.172.36/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.142.172.36/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.135.219.55/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.135.219.55/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.116.69.144/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.116.69.144/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.117.229.135/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.117.229.135/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.17.71.93/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.17.71.93/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.225.98.59/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.225.98.59/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.215.12/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.215.12/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.191.201.27/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.191.201.27/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.116.239.11/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.116.239.11/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.12.164.123/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.12.164.123/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.22.61.111/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.22.61.111/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.219.23.38/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.219.23.38/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.217.93.250/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.217.93.250/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.14.153.55/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.14.153.55/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.218.72.253/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.218.72.253/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 52.14.131.93/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 52.14.131.93/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.118.227.223/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.118.227.223/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.16.30.154/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.16.30.154/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.191.136.109/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.191.136.109/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.19.239.4/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.19.239.4/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.193.130/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.193.130/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.188.60.244/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.188.60.244/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.218.96.239/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.218.96.239/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.2.160/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.2.160/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.148.182.254/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.148.182.254/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.135.240.57/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.135.240.57/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.116.47.33/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.116.47.33/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.140.253.87/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.140.253.87/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 52.14.76.200/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 52.14.76.200/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.131.37.237/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.131.37.237/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.230.138/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.230.138/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.191.223.195/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.191.223.195/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.117.106.206/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.117.106.206/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.118.0.158/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.118.0.158/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.117.93.195/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.117.93.195/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.142.194.150/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.142.194.150/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.143.247.214/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.143.247.214/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.129.68.127/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.129.68.127/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.12.160.150/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.12.160.150/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.191.194.2/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.191.194.2/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.248.210/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.248.210/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.137.174.12/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.137.174.12/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.81.79/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.81.79/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.16.70.193/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.16.70.193/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.12.163.14/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.12.163.14/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.128.79.196/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.128.79.196/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.36.137/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.36.137/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.219.179.32/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.219.179.32/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.224.61.194/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.224.61.194/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.220.199.255/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.220.199.255/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.142.97.186/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.142.97.186/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.218.189.170/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.218.189.170/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.16.69.152/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.16.69.152/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.17.61.147/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.17.61.147/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.219.105.101/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.219.105.101/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.118.3.199/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.118.3.199/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.224.21.26/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.224.21.26/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.216.229.106/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.216.229.106/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.118.140.120/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.118.140.120/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.133.122.235/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.133.122.235/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.142.156.4/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.142.156.4/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.118.142.235/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.118.142.235/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.188.159/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.188.159/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.139.108.138/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.139.108.138/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.189.188.157/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.189.188.157/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.233.150/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.233.150/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.239.31/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.239.31/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.27.22/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.27.22/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.12.120.194/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.12.120.194/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.94.197/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.94.197/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.119.120.229/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.119.120.229/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.59.186/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.59.186/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.118.160.203/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.118.160.203/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.142.131.56/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.142.131.56/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.191.44.233/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.191.44.233/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.50.71/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.50.71/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.217.244.16/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.217.244.16/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.189.184.169/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.189.184.169/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.98.87/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.98.87/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.204.147/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.204.147/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.119.0.35/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.119.0.35/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.19.75.187/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.19.75.187/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.184.40/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.184.40/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.139.86.227/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.139.86.227/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.221.176.186/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.221.176.186/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.189.141.10/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.189.141.10/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.187.29/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.187.29/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.216.93.197/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.216.93.197/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.147.225/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.147.225/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.131.83.165/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.131.83.165/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.197.164/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.197.164/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.217.94.8/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.217.94.8/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.85.3/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.85.3/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.244.184/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.244.184/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.220.41.155/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.220.41.155/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.117.174.43/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.117.174.43/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.190.219.46/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.190.219.46/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.20.232.154/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.20.232.154/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.133.121/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.133.121/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.118.164.139/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.118.164.139/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.48.116/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.48.116/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.223.23.30/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.223.23.30/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.145.231/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.145.231/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.133.154.12/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.133.154.12/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.137.161.250/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.137.161.250/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.12.161.87/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.12.161.87/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.226.214.156/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.226.214.156/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.189.178.124/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.189.178.124/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.59.237/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.59.237/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.141.190.171/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.141.190.171/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.14.146.45/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.14.146.45/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.250.101/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.250.101/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.211.199/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.211.199/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.21.43.123/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.21.43.123/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.218.173.253/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.218.173.253/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.117.249.37/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.117.249.37/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.217.111.22/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.217.111.22/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 52.14.232.226/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 52.14.232.226/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.137.208.89/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.137.208.89/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.227.49.56/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.227.49.56/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 52.14.165.32/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 52.14.165.32/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.48.103/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.48.103/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.139.94.67/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.139.94.67/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.142.208.250/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.142.208.250/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.227.79.31/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.227.79.31/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.142.52.141/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.142.52.141/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.59.141.195/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.59.141.195/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.189.188.15/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.189.188.15/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.180.18/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.180.18/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.117.10.48/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.117.10.48/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.221.49.39/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.221.49.39/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.12.104.80/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.12.104.80/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.223.3.50/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.223.3.50/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.242.216/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.242.216/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.16.48.163/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.16.48.163/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.117.158.174/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.117.158.174/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.12.102.204/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.12.102.204/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.17.185.204/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.17.185.204/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.14.88.60/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.14.88.60/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.84.18/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.84.18/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.116.12.252/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.116.12.252/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.240.39/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.240.39/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.25.33/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.25.33/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.151.244/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.151.244/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.221.234.14/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.221.234.14/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.2.83/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.2.83/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.59.167.61/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.59.167.61/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.16.147.165/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.16.147.165/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.58.146.48/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.58.146.48/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.226.150.251/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.226.150.251/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 52.15.143.11/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 52.15.143.11/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.118.210.110/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.118.210.110/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.220.147.154/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.220.147.154/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.116.50.130/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.116.50.130/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.221.85.236/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.221.85.236/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.224.32.173/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.224.32.173/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.51.214/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.51.214/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.147.34/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.147.34/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.133.109.20/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.133.109.20/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.92.138/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.92.138/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.142.245.16/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.142.245.16/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.89.53/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.89.53/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.242.62/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.242.62/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.135.211.221/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.135.211.221/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.14.134.193/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.14.134.193/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.218.232.140/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.218.232.140/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.141.38.5/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.141.38.5/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.136.18.169/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.136.18.169/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.172.173/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.172.173/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.220.182.171/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.220.182.171/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.19.123/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.19.123/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.107.84/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.107.84/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.129.216.43/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.129.216.43/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.186.200/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.186.200/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.139.55.72/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.139.55.72/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.117.172.251/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.117.172.251/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 13.59.224.235/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 13.59.224.235/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.17.76.135/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.17.76.135/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.142.94.158/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.142.94.158/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.128.160.111/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.128.160.111/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.191.235.214/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.191.235.214/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.23.166/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.23.166/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.188.236.178/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.188.236.178/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.81.54/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.81.54/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.129.194.130/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.129.194.130/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.191.29.0/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.191.29.0/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.139.60.67/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.139.60.67/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.15.78/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.15.78/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.218.177.226/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.218.177.226/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.141.35.52/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.141.35.52/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.229.96/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.229.96/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.146.206.173/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.146.206.173/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.119.119.0/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.119.119.0/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.80.238/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.80.238/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.8.241/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.8.241/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.224.137.108/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.224.137.108/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.36.228/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.36.228/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.94.139/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.94.139/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.144.101.71/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.144.101.71/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.118.37.224/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.118.37.224/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.220.74.135/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.220.74.135/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.138.33.125/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.138.33.125/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.23.101.186/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.23.101.186/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.191.200.36/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.191.200.36/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.188.190.212/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.188.190.212/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.147.103.209/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.147.103.209/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.145.156.202/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.145.156.202/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.146.86/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.146.86/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.222.162.198/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.222.162.198/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.16.216.138/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.16.216.138/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 18.219.36.191/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 18.219.36.191/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.221.165/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.221.165/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 3.15.31.240/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 3.15.31.240/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A FORWARD -j ufw-before-logging-forward
-A FORWARD -j ufw-before-forward
-A FORWARD -j ufw-after-forward
-A FORWARD -j ufw-after-logging-forward
-A FORWARD -j ufw-reject-forward
-A FORWARD -j ufw-track-forward
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
-A ufw-after-input -p udp -m udp --dport 137 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 445 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 67 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 68 -j ufw-skip-to-policy-input
-A ufw-after-input -m addrtype --dst-type BROADCAST -j ufw-skip-to-policy-input
-A ufw-after-logging-forward -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-after-logging-input -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-forward -j ufw-user-forward
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP
-A ufw-before-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-input -p udp -m udp --dport 5353 -j DROP
-A ufw-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A ufw-before-input -j ufw-not-local
-A ufw-before-input -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j DROP
-A ufw-before-input -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A ufw-before-input -j ufw-user-input
-A ufw-before-output -o lo -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -p udp -m udp --dport 5353 -j DROP
-A ufw-before-output -j ufw-user-output
-A ufw-logging-allow -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-logging-deny -m conntrack --ctstate INVALID -m limit --limit 3/min --limit-burst 10 -j RETURN
-A ufw-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP
-A ufw-skip-to-policy-forward -j DROP
-A ufw-skip-to-policy-input -j DROP
-A ufw-skip-to-policy-output -j ACCEPT
-A ufw-track-output -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-output -p udp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-user-input -s 213.231.46.43/32 -p tcp -m multiport --dports 2,22 -j ufw-user-logging-input
-A ufw-user-input -s 213.231.46.43/32 -p tcp -m multiport --dports 2,22 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 80 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 443 -j ACCEPT
-A ufw-user-input -s 213.231.5.249/32 -p tcp -m multiport --dports 1,2,22 -j ufw-user-logging-input
-A ufw-user-input -s 213.231.5.249/32 -p tcp -m multiport --dports 1,2,22 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 1 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 1 -j ACCEPT
-A ufw-user-limit -m limit --limit 3/min -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT --reject-with icmp-port-unreachable
-A ufw-user-limit-accept -j ACCEPT
-A ufw-user-logging-input -s 213.231.46.43/32 -p tcp -m multiport --dports 2,22 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-user-logging-input -s 213.231.46.43/32 -p tcp -m multiport --dports 2,22 -j RETURN
-A ufw-user-logging-input -s 213.231.5.249/32 -p tcp -m multiport --dports 1,2,22 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-user-logging-input -s 213.231.5.249/32 -p tcp -m multiport --dports 1,2,22 -j RETURN
COMMIT
# Completed on Sun Apr  6 18:47:23 2025
